Bug 33231 - Fails to build with libpng >= 1.5.0
Summary: Fails to build with libpng >= 1.5.0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.3.0 RC3
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-18 02:21 UTC by Bernhard Rosenkraenzer
Modified: 2011-01-18 06:47 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Fix (522 bytes, application/octet-stream)
2011-01-18 02:21 UTC, Bernhard Rosenkraenzer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Rosenkraenzer 2011-01-18 02:21:07 UTC
Created attachment 42146 [details]
Fix

Starting with libpng 1.5.0, the png_info struct can no longer be accessed directly, causing LibO RC3 builds to fail in desktop/unx/source/splashx.c
Comment 1 Luboš Luňák 2011-01-18 06:47:07 UTC
Applied to master, thanks.