build with libpng 1.5.0 (fdo#33231)